[project]
name = "konduit-rag-crawller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.119.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "tldextract>=5.3.0",
    "uvicorn[standard]>=0.22.0",
    "langchain>=0.2.7",
    "langchain-community>=0.2.7",
    "langchain-text-splitters>=0.2.2",
    "chromadb>=0.5.3",
]